--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
     <!-- environment -->
 
-    <script type="text/JavaScript" src="src/script.js"></script>
+    <script type="module" src="./src/main.js"></script>
 </body>
 </html>
