--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <!-- props -->
 
     <!-- environment -->
+    <img id="layer1" src="img/layer1.png">
+    <img id="layer2" src="img/layer2.png">
+    <img id="layer3" src="img/layer3.png">
+    <img id="layer4" src="img/layer4.png">
 
     <script type="module" src="src/main.js"></script>
 </body>
