--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <canvas id="canvas1"></canvas>
     
     <!-- characters -->
-
+    <img id="player" src="img/player.png">
+    <img id="angler1" src="img/angler1.png">
+    <img id="angler2" src="img/angler2.png">
+    <img id="lucky" src="img/lucky.png">
     <!-- props -->
 
     <!-- environment -->
